[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/Handy.png" type="Texture" id=1]
[ext_resource path="res://graphics/FlashLight.png" type="Texture" id=2]
[ext_resource path="res://src/Phone.gd" type="Script" id=3]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=4]

[node name="Phone" type="Light2D"]
position = Vector2( -25, -44 )
scale = Vector2( 3.20002, 3.20002 )
z_index = 15
enabled = false
texture = ExtResource( 2 )
color = Color( 1, 0.992157, 0.960784, 1 )
script = ExtResource( 3 )

[node name="PhoneImg" type="TouchScreenButton" parent="."]
light_mask = -2147483646
position = Vector2( -26.7268, -28.954 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 1 )

[node name="PhoneRect" type="ColorRect" parent="PhoneImg"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleFlashlight" type="TouchScreenButton" parent="."]
position = Vector2( 41.0881, 164.105 )
scale = Vector2( 0.0737006, 0.0820329 )
normal = ExtResource( 4 )

[node name="FlashlightRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
margin_right = -150.0
margin_bottom = -150.0
color = Color( 1, 0.72549, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PhoneImg" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="PhoneImg" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="ToggleFlashlight" to="." method="_on_ToggleFlashlight_pressed"]
